--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "mocha",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "enzyme": "^2.9.1"
+    "chai": "^4.1.0",
+    "enzyme": "^2.9.1",
+    "mocha": "^3.4.2",
+    "mocha-webpack": "^1.0.0-rc.1",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1"
   }
 }
